@@ -10,6 +10,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 @Service
@@ -58,7 +59,7 @@ public class FileUploadService {
         } catch (IOException e) {
             e.printStackTrace();
         }
-        if(Files.isReadable(Path.of(fileToSave.getAbsolutePath()))){
+        if(Files.exists(Paths.get(fileToSave.getAbsolutePath()))){
             return fileToSave.getAbsolutePath();
         }
         return "";
